--- a/MyCloset.Services/MyCloset.Services.csproj
+++ b/MyCloset.Services/MyCloset.Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Base.Domain\Base.Domain.csproj" />
+    <ProjectReference Include="..\Exceptions\Exceptions.csproj" />
     <ProjectReference Include="..\Infra.Abstractions\Infra.Abstractions.csproj" />
     <ProjectReference Include="..\MyCloset.Infra.Abstractions\MyCloset.Infra.Abstractions.csproj" />
     <ProjectReference Include="..\MyCloset.Services.Abstraction\MyCloset.Services.Abstractions.csproj" />
