--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,6 +8,14 @@
     },
     "AllowedHosts": "*",
     "ConnectionString": "Server=127.0.0.1;Port=5432;Database=my_closet_data_base;User Id=my_closet_user;Password=my_closet_password;",
-    "DefaultUserPath": "mycloset",
-    "DefaultBasePath": "C:\\temp\\igor"
+    "Token": {
+        "ExpirationTimeInSeconds": 120,
+        "SecretGUID": "A9F7EF0E-2991-454F-9F14-92041F7519B4",
+        "Issuer": "default_issuer",
+        "Audience": "default_audience"
+    },
+    "Path": {
+        "DefaultUser": "mycloset",
+        "DefaultBase": "C:\\temp\\igor"
+    }
 }
