--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,7 +8,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionString": "Server=127.0.0.1;Port=5432;Database=my_closet_data_base;User Id=my_closet_user;Password=my_closet_password;",
-    "Salt": "2F8A4159-ABA4-4DA8-A63E-6F4E82B84DFD",
+    "Secret": "2F8A4159-ABA4-4DA8-A63E-6F4E82B84DFD",
     "Token": {
         "ExpirationTimeInSeconds": 300,
         "SecretGUID": "A9F7EF0E-2991-454F-9F14-92041F7519B4",
