Adiciona criação simples de usuário

--- a/Exceptions/Exceptions.csproj
+++ b/Exceptions/Exceptions.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Resources\Resources.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="BadRequest\" />
+  </ItemGroup>
+
 </Project>
