--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,7 @@
         }
     },
     "AllowedHosts": "*",
+    "Schema": "my_closet_schema",
     "ConnectionString": "Server=127.0.0.1;Port=5432;Database=my_closet_data_base;User Id=my_closet_user;Password=my_closet_password;",
     "Secret": "2F8A4159-ABA4-4DA8-A63E-6F4E82B84DFD",
     "Token": {
