Adiciona validações para tipo de arquivo de imagem e dimensões (largura e altura)

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -21,5 +21,10 @@
     "Path": {
         "DefaultUser": "mycloset",
         "DefaultBase": "C:\\temp\\igor"
+    },
+    "ImageFile": {
+        "PixeLimit": 300,
+        "Extension": "jpeg",
+        "ContentType": "image/jpeg"
     }
 }
